# Conway-Piper

./: CMakeLists.txt  CMakeSettings.json  README.md
src/: Life.cpp  Life.h  Structs.h  fragment.glsl  main.cpp
